src/objects/XLR8_Estate_Planning_Gifting__c.object
<CustomObject>
    <description>XLR8 custom object that holds estate plan, charitable gifting and annual gifting data</description>
    <fields>
        <fullName>ABA_Routing_Number__c</fullName>
        <label>ABA Routing Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attorney</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Estate Plans &amp; Gifting (Attorney)</relationshipLabel>
        <relationshipName>R00N40000001ZpsmEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backup_Executor_Agent__c</fullName>
        <label>Back-up Executor/Agent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_City__c</fullName>
        <label>Bank City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_State__c</fullName>
        <label>Bank State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Street__c</fullName>
        <label>Bank Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Zip__c</fullName>
        <label>Bank Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charity_Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charity Point of Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Estate Plans &amp; Gifting (Charity Point of Contact)</relationshipLabel>
        <relationshipName>R00N40000001ZphVEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Estate Plans &amp; Gifting</relationshipLabel>
        <relationshipName>R00N40000001Yun4EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy on File?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Basis__c</fullName>
        <label>Cost Basis</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custodian_Contact__c</fullName>
        <label>Custodian Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custodian_Phone__c</fullName>
        <label>Custodian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DTC_Number__c</fullName>
        <inlineHelpText>This is the Depository Trust Company Number for the institution.</inlineHelpText>
        <label>DTC Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Acquired__c</fullName>
        <label>Date Acquired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Executed__c</fullName>
        <label>Date Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Given__c</fullName>
        <label>Date Given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Stocks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2503(c) Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Protection Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By-Pass/Credit Shelter Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Lead Annuity Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Lead Unitrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Remainder Annuity Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Remainder Unitrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Codicil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservatorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorce Decree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durable Power of Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Limited Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generation Skipping Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grantor Retained Annuity Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grantor Retained Interest Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grantor Retained Unitrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Power of Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intentionally Defective Grantor Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrevocable Life Insurance Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrevocable Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Revocable Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Will and Testament</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter of Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooled Income Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postnuptial Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Donor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donor 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Estate Plans &amp; Gifting (Donor 1)</relationshipLabel>
        <relationshipName>R00N40000001Zpf3EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donor 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Estate Plans &amp; Gifting (Donor 2)</relationshipLabel>
        <relationshipName>R00N40000001Zpg3EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Estate Plans &amp; Gifting</relationshipLabel>
        <relationshipName>R00N40000001Yun3EAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Executor_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executor/Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Estate Plans &amp; Gifting (Executor/Agent)</relationshipLabel>
        <relationshipName>R00N40000001ZpsNEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Arrangements__c</fullName>
        <label>Final Arrangements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>XLR8_Assets_Liabilities__c</referenceTo>
        <relationshipLabel>Estate Plans &amp; Gifting</relationshipLabel>
        <relationshipName>R00N40000001YunAEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Tax_Return_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift Tax Return  Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Import ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instrument_Gift_Type__c</fullName>
        <label>Instrument/Gift Type</label>
        <picklist>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Traded Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLC Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LP Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stocks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_of_Original_Document__c</fullName>
        <label>Location of Original Document</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Shares__c</fullName>
        <inlineHelpText>If applicable</inlineHelpText>
        <label>Number of Shares</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organ_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organ Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provisions__c</fullName>
        <label>Provisions</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualified_Charity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified Charity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recipient_Account_Info__c</fullName>
        <label>Recipient Account Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recipient_Account__c</fullName>
        <inlineHelpText>Enter Institution &amp; Account Number (e.g. Schwab 123456)</inlineHelpText>
        <label>Recipient Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Estate Plans &amp; Gifting (Recipient Organization)</relationshipLabel>
        <relationshipName>R00N40000001Zpj8EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Recipient</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Effect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superseded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplemental_Instructions__c</fullName>
        <label>Supplemental Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Symbol__c</fullName>
        <inlineHelpText>If applicable</inlineHelpText>
        <label>Symbol</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIN__c</fullName>
        <label>TIN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trust_Name__c</fullName>
        <label>Trust Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trustee 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Estate Plans &amp; Gifting (Trustee 1)</relationshipLabel>
        <relationshipName>R00N40000001ZpoBEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trustee_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trustee 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Estate Plans &amp; Gifting (Trustee 2)</relationshipLabel>
        <relationshipName>R00N40000001ZpiUEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trustee_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trustee 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Estate Plans &amp; Gifting (Trustee 3)</relationshipLabel>
        <relationshipName>R00N40000001ZpoCEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_as_of__c</fullName>
        <label>Value as of</label>
        <type>Date</type>
    </fields>
    <label>Estate Plans &amp; Gifting</label>
    <listViews>
        <fullName>All_Estate_Gifting</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Document_Type__c</columns>
        <columns>Entity__c</columns>
        <columns>Contact__c</columns>
        <columns>Instrument_Gift_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Estate &amp; Gifting</label>
    </listViews>
    <nameField>
        <displayFormat>EP{00000}</displayFormat>
        <label>Plan/Gift ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estate Plans &amp; Gifting</pluralLabel>
    <recordTypes>
        <fullName>AnnualGifting</fullName>
        <active>true</active>
        <description>Tax deductible transfer of assets (subject to IRS annual gift limitations), typically to an individual</description>
        <label>Annual Gifting</label>
    </recordTypes>
    <recordTypes>
        <fullName>CharitableGifting</fullName>
        <active>true</active>
        <description>Tax deductible transfer of assets to an institution or organization which is recognized by the IRS as charitable, nonprofit, or tax-exempt</description>
        <label>Charitable Gifting</label>
    </recordTypes>
    <recordTypes>
        <fullName>EstatePlanningDocument</fullName>
        <active>true</active>
        <description>Documents which plan and organize an estate and assign ownership or control of that estate</description>
        <label>Estate Planning Document</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>